# data-parser

./: .gitignore  README.md  amt_airframe_dataset_readme.md  build_amt_airframe_dataset.py  build_and_push.py  check_images_direct.py  create_chunked_dataset.py  dataset_info.json  debug_litellm.py  e2e_amtp.py  e2e_test.py  main.py  parse_amtp.py  pyproject.toml  pyrightconfig.json  rebuild_dataset.py  rebuild_v2.py  rebuild_v3.py  rebuild_v4.py  verify_amt_airframe_dataset.py  verify_dataset_quality.py  verify_hf_dataset_local.py
parsed_outputs/prepware_audit/20260218T000508Z/: audit_results.json  audit_summary.md
plans/: extraction_pipeline_design.md
src/doc_parser_engine/: __init__.py  audit.py  cli.py  core.py  llm_client.py
src/doc_parser_engine/captioning/: __init__.py  caption_engine.py
src/doc_parser_engine/dataset/: __init__.py  builder.py  hf_saver.py
src/doc_parser_engine/detection/: __init__.py  structure_detector.py
src/doc_parser_engine/extractors/: image_extractor.py  table_extractor.py
src/doc_parser_engine/parsers/: docx_parser.py  epub_parser.py  html_parser.py  pdf_parser.py  text_parser.py
tests/: conftest.py  test_audit.py  test_audit_production.py  test_caption_engine.py  test_cli.py  test_cli_choose_path.py  test_cli_ci.py  test_cli_flags.py  test_detection.py  test_engine.py  test_extraction_pipeline.py  test_integration_no_hf_download.py  test_llm_client.py  verify_hf_dataset.py
wisconsin_dataset/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
