[project]
name = "doc-parser-engine"
version = "0.1.0"
description = "Production-grade document parsing engine with native HuggingFace Datasets integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23.0",
    "pdfminer.six>=20221105",
    "pypdf>=3.17.0",
    "pytesseract>=0.3.10",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "datasets>=2.15.0",
    "huggingface_hub>=0.19.0",
    "pillow>=10.1.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.26.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
ml = ["transformers", "torch"]
ocr = ["pytesseract"]
full = [
    "doc-parser-engine[ml]",
    "doc-parser-engine[ocr]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
doc-parser = "doc_parser_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
